Correct page titles and links

--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
         Roboto Condensed:   400
         Roboto:             300,700     -->
     <link
-        href="https://fonts.googleapis.com/css?family=Crimson+Pro:400i,700i|
-                Roboto+Condensed:400|
-                Roboto:300,500,700  
-                &display=swap"rel="stylesheet">
+        href="https://fonts.googleapis.com/css?family=Crimson+Pro:400i,700i|Roboto+Condensed:400|Roboto:300,500,700&display=swap"
+        rel="stylesheet">
+    <title>Aaron Greider</title>
 </head>
 
 
@@ -22,13 +21,13 @@
     <div class="section-div"></div>
 
     <div class="galleryContainer">
-        <div class="gallerySlide" id="top">         <img class="galleryImg" onclick="openPage('3_project-1.html')" src="Graphics/project1_cover2.jpg"></div>
-        <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('3_project-2.html')" src="Graphics/project7_cover.jpg"></div>
-        <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('3_project-3.html')" src="Graphics/project6_cover.jpg"></div>
-        <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('3_project-4.html')" src="Graphics/project4_cover.jpg"></div>
-        <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('3_project-5.html')" src="Graphics/project1_cover.png"></div>
-        <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('3_project-6.html')" src="Graphics/project5_cover.jpg"></div>
-        <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('3_project-7.html')" src="Graphics/project2_cover.jpg"></div>
+        <div class="gallerySlide" id="top">         <img class="galleryImg" onclick="openPage('project-1.html')" src="Graphics/project1_cover2.jpg"></div>
+        <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('project-2.html')" src="Graphics/project7_cover.jpg"></div>
+        <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('project-3.html')" src="Graphics/project6_cover.jpg"></div>
+        <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('project-4.html')" src="Graphics/project4_cover.jpg"></div>
+        <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('project-5.html')" src="Graphics/project1_cover.png"></div>
+        <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('project-6.html')" src="Graphics/project5_cover.jpg"></div>
+        <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('project-7.html')" src="Graphics/project2_cover.jpg"></div>
     </div>
 
     <div class="textContainer">
