--- a/project-1.html
+++ b/project-1.html
@@ -5,15 +5,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="Graphics/monogram.png" type="image/png" sizes="16x16">
     <link rel="stylesheet" href="3_project_style.css" type="text/css">
+    <title>Aaron/Midnight Snack</title>
 
     <!-- Google Fonts 
         Crimson Pro:        400i,700i
         Roboto Condensed:   400
         Roboto:             300,700     -->
-    <link href="https://fonts.googleapis.com/css?family=Crimson+Pro:400i,700i|
-                Roboto+Condensed:400|
-                Roboto:300,500,700  
-                &display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Pro:400i,700i|Roboto+Condensed:400|Roboto:300,500,700&display=swap" rel="stylesheet">
 </head>
 
 
