--- a/project-5.html
+++ b/project-5.html
@@ -10,10 +10,10 @@
         Crimson Pro:        400i,700i
         Roboto Condensed:   400
         Roboto:             300,700     -->
-    <link href="https://fonts.googleapis.com/css?family=Crimson+Pro:400i,700i|
-                Roboto+Condensed:400|
-                Roboto:300,500,700  
-                &display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css?family=Crimson+Pro:400i,700i|Roboto+Condensed:400|Roboto:300,500,700&display=swap"
+        rel="stylesheet">
+    <title>Aaron/Mezzanine</title>
 </head>
 
 
