--- a/project-6.html
+++ b/project-6.html
@@ -10,10 +10,10 @@
         Crimson Pro:        400i,700i
         Roboto Condensed:   400
         Roboto:             300,700     -->
-    <link href="https://fonts.googleapis.com/css?family=Crimson+Pro:400i,700i|
-                Roboto+Condensed:400|
-                Roboto:300,500,700  
-                &display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css?family=Crimson+Pro:400i,700i|Roboto+Condensed:400|Roboto:300,500,700&display=swap"
+        rel="stylesheet">
+    <title>Aaron/Wawa Mural</title>
 </head>
 
 
@@ -39,8 +39,8 @@
             <p class="cardSupport"> <br>There isn’t much more to it, I began to see lots of progress in building 
                                         vector graphics, and experimented with textures and noise for shading. 
                                         
-                                        <br><br>(locations and labels are laid out in
-                                        <a href="Graphics/Wawa/wawa_locations.pdf" target="_blank">this document</a>)
+                                        <br><br>If you're curious, I've labeled each illustration by name and geographically in
+                                        <a href="Graphics/Wawa/wawa_locations.pdf" target="_blank">this document.</a>
                                         <br><br>[tip] Open the image in a new tab and zoom in a bit!
             </p>
         </div>
