--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 
 <body>
+
     <div class="section-div"></div>
 
     <div class="galleryContainer">
@@ -95,6 +96,22 @@
     </div>
 
 
+    <!--- ANNOUNCEMENT -->
+    <div class="heyThere fadeMeIn">
+        <h5 class="fadeMeIn">Hey There!</h5>
+        <p class="fadeMeIn">As I am but one simple man in a world where browser support is the complicated beast that it is,
+            I've optimized my portfolio for Google Chrome. If you're able, please switch over to Chrome as
+            there are a few performance issues here and there on other browsers. Thanks!
+        </p>
+    
+        <div class="continueBtn fadeMeIn">
+            <h3 style="cursor: pointer;" onclick="dismiss()">OKIE DOKIE!</h3>
+            <svg style="cursor: pointer;" onclick="dismiss()">
+                <rect />
+            </svg>
+        </div>
+    
+    </div>
     <!--- ARROWS -->
     <!--- ARROWS -->
     <h4 id="about">ABOUT &#8595;</h4>
