Google Analytics tag and additional text

--- a/project-2.html
+++ b/project-2.html
@@ -163,11 +163,17 @@
         <div class="card">
             <img class="cardImg" src="Graphics/Allbirds/allbirds_pres-17.jpg">
         </div>
+        <div class="flexText">
+            <p class="cardSupport">
+                In addition to simply being more sustainable by using less material, the reduced footprint observes 
+                lower shipping costs as each package weighs less and more boxes can be shipped per container.
+            </p>
+        </div>
         <div class="card">
             <img class="cardImg" src="Graphics/Allbirds/allbirds_process-12.jpg">
         </div>
 
-  
+
 
 
         <div class="section-2">
