--- a/index.html
+++ b/index.html
@@ -6,14 +6,20 @@
     <link rel="icon" href="Graphics/monogram.png" type="image/png" sizes="16x16">
     <link rel="stylesheet" href="2_gallery_style.css" type="text/css">
     
-    <!-- Google Fonts 
-        Crimson Pro:        400i,700i
-        Roboto Condensed:   400
-        Roboto:             300,700     -->
     <link
         href="https://fonts.googleapis.com/css?family=Crimson+Pro:400i,700i|Roboto+Condensed:400|Roboto:300,500,700&display=swap"
         rel="stylesheet">
     <title>Aaron Greider</title>
+
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126829303-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'UA-126829303-1');
+    </script>
 </head>
 
 
