--- a/project-1.html
+++ b/project-1.html
@@ -12,6 +12,15 @@
         Roboto Condensed:   400
         Roboto:             300,700     -->
     <link href="https://fonts.googleapis.com/css?family=Crimson+Pro:400i,700i|Roboto+Condensed:400|Roboto:300,500,700&display=swap" rel="stylesheet">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126829303-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'UA-126829303-1');
+    </script>
 </head>
 
 
