--- a/project-7.html
+++ b/project-7.html
@@ -14,6 +14,18 @@
         href="https://fonts.googleapis.com/css?family=Crimson+Pro:400i,700i|Roboto+Condensed:400|Roboto:300,500,700&display=swap"
         rel="stylesheet">
     <title>Aaron/Boys Will Be Bugs</title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126829303-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'UA-126829303-1');
+    </script>
+
+
+
 </head>
 
 
