--- a/project-3.html
+++ b/project-3.html
@@ -2,6 +2,18 @@
 <html>
 
 <head>
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+        w[l] = w[l] || []; w[l].push({
+            'gtm.start':
+                new Date().getTime(), event: 'gtm.js'
+        }); var f = d.getElementsByTagName(s)[0],
+            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-TTM5PJ9');</script>
+    <!-- End Google Tag Manager -->
+
+    
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="Graphics/monogram.png" type="image/png" sizes="16x16">
     <link rel="stylesheet" href="3_project_style.css" type="text/css">
@@ -14,23 +26,16 @@
         href="https://fonts.googleapis.com/css?family=Crimson+Pro:400i,700i|Roboto+Condensed:400|Roboto:300,500,700&display=swap"
         rel="stylesheet">
     <title>Aaron/B-Dubs</title>
-
-    
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126829303-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-        gtag('config', 'UA-126829303-1');
-    </script>
-
-
-
 </head>
 
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TTM5PJ9" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
+
     <div class="galleryNav">
         <h3 style="cursor: pointer;" onclick="openGallery('index.html')">GALLERY</h3>
         <svg style="cursor: pointer;" onclick="openGallery('index.html')">
