--- a/project-4.html
+++ b/project-4.html
@@ -56,6 +56,12 @@
         <div class="card">
             <img class="cardImg" src="Graphics/Fiend/fiend_process-13.jpg">
         </div>
+        <div class="card">
+            <video controls loop="true" autoplay="true">
+                <source src="Graphics/Fiend/fiend_video1.mp4" type="video/mp4">
+                soz :/ your browser does not support embedded videos.
+            </video>
+        </div>
         <div class="flexText">
             <p class="cardSupport"> Beginning with a category and a statement of intent, to a logo, then to the spread design,
                                         this academic project became very dense. <br><br> To consolidate, most of my iterations are contained in gifs.
