Final Wordmark addition

--- a/project-4.html
+++ b/project-4.html
@@ -128,6 +128,9 @@
         <div class="card">
             <img class="cardImg" src="Graphics/Fiend/fiend_process-15.jpg">
         </div>
+        <div class="card">
+            <img class="cardImg" src="Graphics/Fiend/fiend_process-18.jpg">
+        </div>
 
 
         <div class="section-2">
