--- a/project-4.html
+++ b/project-4.html
@@ -111,6 +111,9 @@
             </div>
         </div>
         <div class="card">
+            <img class="cardImg" src="Graphics/Fiend/fiend_process-17.jpg">
+        </div>
+        <div class="card">
             <div class="flexTwo">
                 <img class="cardImg" style="max-height: 15.6vw !important;" src="Graphics/Fiend/fiend_gif1.gif">
                 <img class="cardImg" style="max-height: 15.6vw !important;" src="Graphics/Fiend/fiend_gif2.gif">
