--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
     <div class="galleryContainer">
         <div class="gallerySlide" id="top">        <img class="galleryImg" onclick="openPage('project-1.html')" src="Graphics/project1_cover.png"></div>
         
-        <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('project-2.html')" src="Graphics/project7_cover.jpg"></div>
+        <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('project-2.html')" src="Graphics/project2-1_cover.jpg"></div>
         <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('project-3.html')" src="Graphics/project6_cover.jpg"></div>
         <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('project-4.html')" src="Graphics/project4_cover.jpg"></div>
         <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('project-5.html')" src="Graphics/project1_cover2.jpg"></div>
         <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('project-6.html')" src="Graphics/project5_cover.jpg"></div>
-        <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('project-7.html')" src="Graphics/project2_cover.jpg"></div>
+        <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('project-7.html')" src="Graphics/project7_cover.jpg"></div>
+        <div class="gallerySlide" id="null">        <img class="galleryImg" onclick="openPage('project-8.html')" src="Graphics/project2_cover.jpg"></div>
     </div>
 
     <div class="textContainer">
@@ -53,25 +54,25 @@
             <div class="galleryText">
                 <h4 class="">ALBUM COVER</h4>
                 <h1 class="">Mezzanine</h1>
-                <h3 class="">1 <span class="" style="font-size: .6em;">/ 7</span></h3>
+                <h3 class="">1 <span class="" style="font-size: .6em;">/ 8</span></h3>
                 <p class="">Mezzanine is a trip hop classic, and there was no better location to embody its ambient
                     sound than the local abandoned pool.</p>
             </div>            
 
             <div class="galleryText">
-                <h4 class="inactiveFinal">COMPETITION</h4>
-                <h1 class="inactiveFinal">Allbirds Packaging</h1>
-                <h3 class="inactiveFinal">2 <span class="inactiveFinal" style="font-size: .6em;">/ 7</span></h3>
-                <p class="inactiveFinal">Students from all majors and years were encouraged to apply to UC's off-campus maker space
-                    for an
-                    opportunity to present two redesigns of the Allbirds shoe packaging to Tim Brown, the CEO.
+                <h4 class="inactiveFinal">UX/UI</h4>
+                <h1 class="inactiveFinal">Craigslist Redesign</h1>
+                <h3 class="inactiveFinal">2 <span class="inactiveFinal" style="font-size: .6em;">/ 8</span></h3>
+                <p class="inactiveFinal">The current UI is truly a relic from the dawn of the internet,
+                it's a miracle it's survived this long. I analyzed and user tested craigslist, then redesigned it.
+                This is the Craislist we know and love, but ~better~
                 </p>
             </div>
 
             <div class="galleryText">
                 <h4 class="inactiveFinal">GIFT CARDS</h4>
                 <h1 class="inactiveFinal">Buffalo Wild Wings</h1>
-                <h3 class="inactiveFinal">3 <span class="inactiveFinal" style="font-size: .6em;">/ 7</span></h3>
+                <h3 class="inactiveFinal">3 <span class="inactiveFinal" style="font-size: .6em;">/ 8</span></h3>
                 <p class="inactiveFinal">After having done a full rebrand of B-Dubs, Inspire Brands hit us with a fresh task: create a bunch
                                          of different gift card concepts that <s>are better than Starbucks</s> have unique carriers and designs.
                 </p>
@@ -80,7 +81,7 @@
             <div class="galleryText">
                 <h4 class="inactiveFinal">MAGAZINE</h4>
                 <h1 class="inactiveFinal">Alley Fiend</h1>
-                <h3 class="inactiveFinal">4 <span class="inactiveFinal" style="font-size: .6em;">/ 7</span></h3>
+                <h3 class="inactiveFinal">4 <span class="inactiveFinal" style="font-size: .6em;">/ 8</span></h3>
                 <p class="inactiveFinal">Alley Fiend is a lifestyle publication that celebrates anarcho-punk culture and a 
                                         near pointless glorification of gratuitous self-indulgence.
                 </p>
@@ -89,7 +90,7 @@
             <div class="galleryText">
                 <h4 class="inactiveFinal">ALBUM COVER</h4>
                 <h1 class="inactiveFinal">Midnight Snack</h1>
-                <h3 class="inactiveFinal">5 <span class="inactiveFinal" style="font-size: .6em;">/ 7</span></h3>
+                <h3 class="inactiveFinal">5 <span class="inactiveFinal" style="font-size: .6em;">/ 8</span></h3>
                 <p class="inactiveFinal">A man, a ten second camera timer, and an empty refrigerator. I designed a new album cover for
                     Homeshake's Midnight snack
                     featuring myself, as the midnight snack...</p>
@@ -98,16 +99,26 @@
             <div class="galleryText">
                 <h4 class="inactiveFinal">MURAL</h4>
                 <h1 class="inactiveFinal">Wawa, Gainesville</h1>
-                <h3 class="inactiveFinal">6 <span class="inactiveFinal" style="font-size: .6em;">/ 7</span></h3>
+                <h3 class="inactiveFinal">6 <span class="inactiveFinal" style="font-size: .6em;">/ 8</span></h3>
                 <p class="inactiveFinal">The Wawa Convenience Store in Gainseville Florida is a block away from the 
                                         University of Florida campus. Naturally, they requested a mural that depicted iconic UF locations.
                 </p>
             </div>
 
             <div class="galleryText">
+                <h4 class="inactiveFinal">COMPETITION</h4>
+                <h1 class="inactiveFinal">Allbirds Packaging</h1>
+                <h3 class="inactiveFinal">7 <span class="inactiveFinal" style="font-size: .6em;">/ 8</span></h3>
+                <p class="inactiveFinal">Students from all majors and years were encouraged to apply to UC's off-campus maker space
+                    for an
+                    opportunity to present two redesigns of the Allbirds shoe packaging to Tim Brown, the CEO.
+                </p>
+            </div>
+
+            <div class="galleryText">
                 <h4 class="inactiveFinal">ALBUM COVER</h4>
                 <h1 class="inactiveFinal">Boys Will Be Bugs</h1>
-                <h3 class="inactiveFinal">7 <span class="inactiveFinal" style="font-size: .6em;">/ 7</span></h3>
+                <h3 class="inactiveFinal">8 <span class="inactiveFinal" style="font-size: .6em;">/ 8</span></h3>
                 <p class="inactiveFinal">This moment I captured is worth much more than the plastic CD case I placed them in. I captured my little cousins
                 playing in a creek waterfall, being the tiny carefree bugs they are.</p>
             </div>
