--- a/project-8.html
+++ b/project-8.html
@@ -15,7 +15,8 @@
 
 
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="Graphics/monogram.png" type="image/png" sizes="16x16">
+    <link rel="shortcut icon" href="Graphics/fav.ico" type="image/x-icon">
+    <link rel="icon" href="Graphics/fav.ico" type="image/x-icon">
     <link rel="stylesheet" href="3_project_style.css" type="text/css">
 
     <!-- Google Fonts 
