Mobile edit push

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
     <div class="section-div"></div>
 
+    <!--The id defines which project is on top and on deck by modifying the active CSS applied to each element-->
     <div class="galleryContainer">
         <div class="gallerySlide" id="top">        <img class="galleryImg" onclick="openPage('project-1.html')" src="Graphics/project1_cover.png"></div>
         
