Project page mobile layouts

--- a/project-1.html
+++ b/project-1.html
@@ -65,8 +65,8 @@
         </div>
         <div class="card">
             <div class="flexTwo">
-                <img class="cardImg" style="max-height: 29vw !important;" src="Graphics/Mezzanine/MEZZ_process-20.jpg">
-                <img class="cardImg" style="max-height: 29vw !important;" src="Graphics/Mezzanine/MEZZ_process-10.jpg">
+                <img class="cardImg" style="max-height: 29vw ;" src="Graphics/Mezzanine/MEZZ_process-20.jpg">
+                <img class="cardImg" style="max-height: 29vw ;" src="Graphics/Mezzanine/MEZZ_process-10.jpg">
             </div>
         </div>
         <div class="card">
@@ -77,8 +77,8 @@
         </div>
         <div class="card">
             <div class="flexTwo">
-                <img class="cardImg" style="max-height: 29vw !important;" src="Graphics/Mezzanine/MEZZ_process-1.jpg">
-                <img class="cardImg" style="max-height: 29vw !important;" src="Graphics/Mezzanine/MEZZ_process-2.jpg">
+                <img class="cardImg" style="max-height: 29vw ;" src="Graphics/Mezzanine/MEZZ_process-1.jpg">
+                <img class="cardImg" style="max-height: 29vw ;" src="Graphics/Mezzanine/MEZZ_process-2.jpg">
             </div>
         </div>
         <div class="card">
@@ -108,8 +108,8 @@
         </div>
         <div class="card">
             <div class="flexTwo">
-                <img class="cardImg" style="max-height: 40.3vw !important;" src="Graphics/Mezzanine/MEZZ_process-5.jpg">
-                <img class="cardImg" style="max-height: 40.3vw !important;" src="Graphics/Mezzanine/MEZZ_process-6.jpg">
+                <img class="cardImg" style="max-height: 40.3vw ;" src="Graphics/Mezzanine/MEZZ_process-5.jpg">
+                <img class="cardImg" style="max-height: 40.3vw ;" src="Graphics/Mezzanine/MEZZ_process-6.jpg">
             </div>
         </div>
         <div class="card">
@@ -117,8 +117,8 @@
         </div>
         <div class="card">
             <div class="flexTwo">
-                <img class="cardImg" style="max-height: 29vw !important;" src="Graphics/Mezzanine/MEZZ_process-11.jpg">
-                <img class="cardImg" style="max-height: 29vw !important;" src="Graphics/Mezzanine/MEZZ_process-12.jpg">
+                <img class="cardImg" style="max-height: 29vw ;" src="Graphics/Mezzanine/MEZZ_process-11.jpg">
+                <img class="cardImg" style="max-height: 29vw ;" src="Graphics/Mezzanine/MEZZ_process-12.jpg">
             </div>
         </div>
         <div class="flexText">
