--- a/index.html
+++ b/index.html
@@ -35,6 +35,45 @@
     <!-- End Google Tag Manager (noscript) -->
 
 
+
+
+    <!--HAMBURGER-->
+    <!--HAMBURGER-->
+    <!--HAMBURGER-->
+    <!--HAMBURGER-->
+    <!--HAMBURGER-->    
+<nav role="navigation" >
+    <div id="menuToggle">
+        <!-- A fake / hidden checkbox is used as click reciever,
+    so you can use the :checked selector on it. -->
+        <input type="checkbox" onclick="openProjectNav()"/>
+
+        <!-- 1 span = 1 line of hamburger -->
+        <span></span>
+        <span></span>
+        <span></span>
+
+        <!-- The menu has to be inside of the button -->
+        <div id="menu">
+        </div>
+    </div>
+    <div class="menuItemsContainer">
+        <p class="">Project 1</p>
+        <p class="">Project 2</p>
+        <p class="">Project 3</p>
+        <p class="">Project 4</p>
+    </div>
+</nav>
+    <!--HAMBURGER-->
+    <!--HAMBURGER-->
+    <!--HAMBURGER-->
+    <!--HAMBURGER-->
+    <!--HAMBURGER-->
+
+
+
+
+
     <div class="section-div"></div>
 
     <!--The id defines which project is on top and on deck by modifying the active CSS applied to each element-->
