--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     <!--HAMBURGER-->
     <!--HAMBURGER-->
     <!--HAMBURGER-->    
-<nav role="navigation" >
+<nav role="navigation">
     <div id="menuToggle">
         <!-- A fake / hidden checkbox is used as click reciever,
     so you can use the :checked selector on it. -->
-        <input type="checkbox" onclick="openProjectNav()"/>
+        <input type="checkbox" onclick="openProjectNav()" unchecked/>
 
         <!-- 1 span = 1 line of hamburger -->
         <span></span>
@@ -58,10 +58,12 @@
         </div>
     </div>
     <div class="menuItemsContainer">
-        <p class="">Project 1</p>
-        <p class="">Project 2</p>
-        <p class="">Project 3</p>
-        <p class="">Project 4</p>
+        <!--
+            <p class="">Project 1</p>
+            <p class="">Project 2</p>
+            <p class="">Project 3</p>
+            <p class="">Project 4</p> 
+        -->
     </div>
 </nav>
     <!--HAMBURGER-->
