--- a/oxley.html
+++ b/oxley.html
@@ -56,8 +56,10 @@
                 navigate
                 obstacles and
                 streets (GPS), find objects and read specific text fields when needed.</p>
-            <img
-                src="https://boom-advantage-beb.notion.site/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2Ffb34b58e-8f36-4377-b950-640859f460ac%2Fmockup_front-2.png?table=block&id=f37f5266-5b71-48cb-a658-6a8bb5bfca99&spaceId=3ea52727-c63e-438b-bc36-c5adfa42c302&width=2000&userId=&cache=v2">
+            <div>
+                <img
+                    src="https://boom-advantage-beb.notion.site/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2Ffb34b58e-8f36-4377-b950-640859f460ac%2Fmockup_front-2.png?table=block&id=f37f5266-5b71-48cb-a658-6a8bb5bfca99&spaceId=3ea52727-c63e-438b-bc36-c5adfa42c302&width=2000&userId=&cache=v2">
+            </div>
         </div>
         <p><b>Features:</b> Oxley Go uses a camera and earpiece. The two cameras identify proximity and the speaker
             would alert
@@ -65,8 +67,7 @@
             of obstacles such as upcoming traffic or torso-level obstructions. The cameras are able to translate
             writings and signs
             to the user’s ears by voice. Oxley Home serves as a home base for ergonomic wireless charging for Oxley
-            Go
-            and as a
+            Go and as a
             virtual assistant that can help the user stay organized.<br><br></p>
         <div class="flex-row">
             <div><img class="icon"
