PDF embed to codepen

--- a/helion.html
+++ b/helion.html
@@ -34,7 +34,7 @@
             <br>brand creation
             <br>print design
         </aside>
-        <div class="parallaxContainer" style="overflow: hidden;"><img src="Graphics/project4_cover.jpg"></div>
+        <img src="Graphics/project4_cover.jpg">
         <p>This PDF outlines the guidelines for the Helion Health Brand.
             <br><br>
             The layout, graphic treatments, artifacts and diagrams, and much of the copy in this 50-page document were
@@ -42,7 +42,7 @@
             by myself, directly following the collaborative process of creating the visual system.
         </p>
 
-        <div id="adobe-dc-view" style="height: 25rem !important; width: 100%;"></div>
+        <!--  <div id="adobe-dc-view" style="height: 25rem !important; width: 100%;"></div>
         <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
         <script type="text/javascript">
             document.addEventListener("adobe_dc_view_sdk.ready", function () {
@@ -55,7 +55,34 @@
                     showPrintPDF: false
                 });
             });
-        </script>
+        </script> -->
+        <!-- <div id="adobe-dc-view" style="height: 360px; width: 500px;"></div>
+        <script src="https://documentcloud.adobe.com/view-sdk/viewer.js"></script>
+        <script type="text/javascript">
+            document.addEventListener("adobe_dc_view_sdk.ready", function () {
+                var adobeDCView = new AdobeDC.View({ clientId: "<YOUR_CLIENT_ID>", divId: "adobe-dc-view" });
+                adobeDCView.previewFile({
+                    content: {
+                        location:
+                            { url: "https://documentcloud.adobe.com/view-sdk-demo/PDFs/Bodea%20Brochure.pdf" }
+                    },
+                    metaData: { fileName: "Bodea Brochure.pdf" }
+                },
+                    {
+                        embedMode: "SIZED_CONTAINER"
+                    });
+            });
+        </script> -->
+        <p class="codepen" data-theme-id="light" data-slug-hash="mdxJgzr" data-user="aarongreider"
+            style="height: 5000px !important; width: 100%; box-sizing: border-box; display: flex; align-items: center; justify-content: center;">
+            <span>See the Pen <a href="https://codepen.io/aarongreider/pen/mdxJgzr">
+                    Adobe PDF test</a> by Aaron Greider (<a href="https://codepen.io/aarongreider">@aarongreider</a>)
+                on <a href="https://codepen.io">CodePen</a>.</span>
+        </p>
+        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+
+
+
 
         <p>After the organization of the brand guidelines, I was tasked with creating the designs of the Helion website.
             This
@@ -75,7 +102,7 @@
         <a class="arrow"
             href="https://www.figma.com/proto/gsbpkAO34pZXnKaTz0M7El/Helion-Website?page-id=0%3A1&node-id=2%3A2575&starting-point-node-id=2%3A2575"
             target="_blank"><span>View the prototype in another tab here.</span></a>
-        <p><br><br><br></p>
+        <p><br><br></p>
         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1); width: 100%; height: 25rem;"
             src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FgsbpkAO34pZXnKaTz0M7El%2FHelion-Website%3Fpage-id%3D0%253A1%26node-id%3D2%253A2575%26starting-point-node-id%3D2%253A2575"
             allowfullscreen></iframe>
