seo title and about updates

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 'opsz' 48
         }
     </style>
-    <title>Aaron Greider</title>
+    <title>Aaron Greider - Graphic Design | Cincinnati</title>
 </head>
 
 
@@ -45,7 +45,14 @@
         When I'm not vibing with my adorable cat <a id="karma">Karma,</a> you can find me enjoying a picnic,
         noodling in photoshop, or on a backpacking trip.
         <br><br>
-        I'm currently searching for a full time position for Fall 2022 – get in touch!
+        I'm currently completely redesigning Jungle Jim's International Market's website in Figma and WordPress.
+        Questions? Get in touch!
+<!--         <br><br>
+        ADOBE SUITE: Photoshop, InDesign, After Effects, Illustrator, Adobe Xd<br>
+        WEB: WordPress, HTML5 / CSS, Javascript, GSAP, WebGL, ThreeJS<br>
+        FIGMA: Designing and prototyping wireframes, components, animation, and style sheets<br>
+        ANIMATION: After Effects and Blender<br>
+        AUTOMATION: Zapier and Google Apps Script -->
     </p>
 
     <div id="mouse"></div>
