seo meta keywords

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="Graphic designer specializing in web, brand, and animation design. Currently redesigning Jungle Jim's International Market's website in Figma and WordPress.">
+    <meta name="keywords" content="Graphic Designer, Cincinnati, Figma, Design, Web Design, Animation, Automation, Apps Scipt, HTML, CSS, JavaScript, Adobe, GSAP">
+
     <link rel="stylesheet" href="2_gallery_style.css" type="text/css">
 
     <link rel="icon"
